[gd_scene load_steps=12 format=3 uid="uid://dnwps71mte2lt"]

[ext_resource type="Script" uid="uid://b0gv5hsmqp0gh" path="res://cube.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://bdn0aajl6yxig" path="res://ai_controller_3d.gd" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://xebh45acyl7i" path="res://addons/godot_rl_agents/sync.gd" id="3_h2yge"]

[sub_resource type="BoxMesh" id="BoxMesh_0xm2m"]
lightmap_size_hint = Vector2i(14, 21)

[sub_resource type="BoxShape3D" id="BoxShape3D_h2yge"]

[sub_resource type="BoxMesh" id="BoxMesh_1bvp3"]
size = Vector3(10, 0.1, 10)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_lquwl"]
data = PackedVector3Array(-5, 0.05, 5, 5, 0.05, 5, -5, -0.05, 5, 5, 0.05, 5, 5, -0.05, 5, -5, -0.05, 5, 5, 0.05, -5, -5, 0.05, -5, 5, -0.05, -5, -5, 0.05, -5, -5, -0.05, -5, 5, -0.05, -5, 5, 0.05, 5, 5, 0.05, -5, 5, -0.05, 5, 5, 0.05, -5, 5, -0.05, -5, 5, -0.05, 5, -5, 0.05, -5, -5, 0.05, 5, -5, -0.05, -5, -5, 0.05, 5, -5, -0.05, 5, -5, -0.05, -5, 5, 0.05, 5, -5, 0.05, 5, 5, 0.05, -5, -5, 0.05, 5, -5, 0.05, -5, 5, 0.05, -5, -5, -0.05, 5, 5, -0.05, 5, -5, -0.05, -5, 5, -0.05, 5, 5, -0.05, -5, -5, -0.05, -5)

[sub_resource type="BoxShape3D" id="BoxShape3D_7mycd"]

[sub_resource type="BoxMesh" id="BoxMesh_272bh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ig7tw"]
size = Vector3(1, 1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_0xm2m"]
size = Vector3(10, 1, 1)

[node name="Main" type="Node3D"]

[node name="Cube" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.86, 0.989128, 0)
script = ExtResource("1_ig7tw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cube"]
mesh = SubResource("BoxMesh_0xm2m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube"]
shape = SubResource("BoxShape3D_h2yge")

[node name="AIController3D" type="Node3D" parent="Cube"]
script = ExtResource("2_0xm2m")
metadata/_custom_type_script = "uid://dk7ybvniky5yd"

[node name="Floor" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_1bvp3")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_lquwl")

[node name="Target" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.78019, -0.375654, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Target"]
shape = SubResource("BoxShape3D_7mycd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Target"]
mesh = SubResource("BoxMesh_272bh")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.53682, 0, 0)
shape = SubResource("BoxShape3D_ig7tw")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.53682, 0, 0)
shape = SubResource("BoxShape3D_ig7tw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.49611)
shape = SubResource("BoxShape3D_0xm2m")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.51646)
shape = SubResource("BoxShape3D_0xm2m")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.03597, 6.14193)

[node name="Sync" type="Node" parent="."]
script = ExtResource("3_h2yge")
metadata/_custom_type_script = "uid://xebh45acyl7i"

[connection signal="body_entered" from="Target" to="Cube" method="_on_target_body_entered"]
[connection signal="body_entered" from="Area3D" to="Cube" method="_on_area_3d_body_entered"]
